added JS files and MVP txt

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Steps2Goal</title>
+
+    <!-- Reset CSS -->
+    <link rel="stylesheet" href="reset.css">
+
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+
+    <!-- Local CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>hello</p>
-    
+
+
+
+
+
+
+
+
+    <!-- Script Tags -->
+    <!-- Bootstrap CDN -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
+    <!-- jQuery CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Local JS -->
+    <script src="assets/main.js"></script>
 </body>
 </html>
