Added functionality to response of AJAX call of FourSquare. Changed some items on the index page.

--- a/results.html
+++ b/results.html
@@ -28,7 +28,7 @@
 
     <div class="bodyContent">
 
-        <table class="resultsTable" style="width: 80%;" border="1" cellpadding="1">
+        <table class="resultsTable" style="width: 100%;" border="1" cellpadding="1">
             <tbody>
             <tr>
             <td><h2>Your Current Location</td>
@@ -54,12 +54,12 @@
 
             </div>
 
-            <div id='map' style='width: auto; height: 300px;'></div>
+            <div id='map' style='width: auto; height: auto;'></div>
 
 
             <br>
 
-            <table class="resultsTable" style="width: 80%;" border="1" cellpadding="1">
+            <table class="resultsTable" style="width: 100%;" border="1" cellpadding="1">
                 <tbody>
                 <tr>
                 <td><h2>Distance to completion of step goal</td>
@@ -70,7 +70,7 @@
             
             <br>
 
-            <table class="resultsTable" style="width: 80%;" border="1" cellpadding="1">
+            <table class="resultsTable" style="width: 100%;" border="1" cellpadding="1">
                 
                 <thead>
                 <th><h2>Here are some Places you can Go to!</th>
@@ -101,7 +101,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
 
     <!-- Google Maps CDN -->
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCyP0zeiIILBW9EPXfiYD2VU3E6gm5hPnk"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyP0zeiIILBW9EPXfiYD2VU3E6gm5hPnk&libraries=places"></script>
 
     <!-- Local JS File -->
     <script src="./assets/mockFitbitResponse.js"></script>
