--- a/results.html
+++ b/results.html
@@ -88,7 +88,7 @@
     <!-- End Page Loading -->
 
     
-    <div class="row">
+    <div class="row" id="titleRow">
 
             <div class="col s12 z-depth-4 card-panel"><span class="flow-text">Where you can Go!</span></div>
           </div>
