Updated JS file and results file for Fitbit API

--- a/results.html
+++ b/results.html
@@ -117,7 +117,7 @@
       <table class="centered" class="Responsive">
         <thead>
 
-          <th>Distance to Goal</th>
+          <th>Remaining Steps To Goal</th>
           <th id="goal">XXXXXXX</th>
 
         </thead>
@@ -125,7 +125,7 @@
         <tbody id="results-to-goal">
           <tr>
             <td>Starbucks</td>
-            <td>1366 meters</td>
+            <td>0.5 mi</td>
             
           </tr>
         </tbody>
