--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <a href="https://www.fitbit.com/oauth2/authorize?response_type=token&client_id=22D9DS&redirect_uri=https%3A%2F%2Frpr8605.github.io%2Fsteps2goal%2Fresults.html&scope=activity%20heartrate%20location%20nutrition%20profile%20settings%20sleep%20social%20weight&expires_in=604800&prompt=login_consent
+              <a href="https://www.fitbit.com/oauth2/authorize?response_type=token&client_id=22D9DS&redirect_uri=https%3A%2F%2Frpr8605.github.io%2Fsteps2goal%2Fresults.html&scope=activity%20heartrate%20location%20nutrition%20profile%20settings%20sleep%20social%20weight&expires_in=604800
               "class="btn waves-effect waves-light col s12" id="submit"
                 >Login</a>
             </div>
@@ -126,7 +126,7 @@
           <div class="row">
             <div class="input-field col s6 m6 l6">
               <p class="margin medium-small">
-                <a href="https://www.fitbit.com/oauth2/authorize?response_type=token&client_id=22D9DS&redirect_uri=https%3A%2F%2Frpr8605.github.io%2Fsteps2goal%2Fresults.html&scope=activity%20heartrate%20location%20nutrition%20profile%20settings%20sleep%20social%20weight&expires_in=604800&prompt=login_consent
+                <a href="https://www.fitbit.com/oauth2/authorize?response_type=token&client_id=22D9DS&redirect_uri=https%3A%2F%2Frpr8605.github.io%2Fsteps2goal%2Fresults.html&scope=activity%20heartrate%20location%20nutrition%20profile%20settings%20sleep%20social%20weight&expires_in=604800
                 ">Sign Up!</a>
               </p>
             </div>
